--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -12,7 +12,9 @@ body {
     background: #f0f0f5;
 }
 
-input, button, text-area {
+input,
+button,
+text-area {
     font: 400 18px Roboto, sans-serif;
 }
 
@@ -48,4 +50,23 @@ form input {
 
 .button:hover {
     filter: brightness(90%);
+}
+
+.back-link {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    color: #41414d;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: opacity;
+}
+
+.back-link {
+    margin-right: 8px;
+}
+
+.back-link {
+    opacity: 0.8;
 }
