--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -14,7 +14,7 @@ body {
 
 input,
 button,
-text-area {
+textarea {
     font: 400 18px Roboto, sans-serif;
 }
 
@@ -29,6 +29,17 @@ form input {
     border: 1px solid #dcdce6;
     border-radius: 8px;
     padding: 0 24px;
+}
+
+form textarea {
+    resize: vertical;
+    width: 100%;
+    min-height: 140px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
 }
 
 .button {
